# go2_mission

./: .gitignore
src/go2_mission/: package.xml  setup.cfg  setup.py
src/go2_mission/go2_mission/: diagnostics_subscriber.py  hsv_tuner.py  mission_manager.py  toplight_detector.py
src/tower_light_detector/: hsv_sample.py  package.xml  setup.cfg  setup.py
src/tower_light_detector/config/: color_params.yaml
src/tower_light_detector/launch/: detector.launch.py
src/tower_light_detector/tower_light_detector/: calibrate_hsv.py  color_utils.py  detector_node.py  mission_node.py
