<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tower_light_detector</name>
  <version>0.1.0</version>
  <description>
    Webcam-based tower light (stack light) color detector for ROS 2.
    Publishes detected color and dispatches mission actions for competition use.
  </description>
  <maintainer email="vkrtp2@gmail.com">jeonbotdae</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
